# playground

./: Cargo.toml  README.md
.devcontainer/: Dockerfile.rust-stable  devcontainer.json
benches/: find.rs
examples/: task_manager.rs
src/: lib.rs  main.rs  min_slice.rs
src/arc/: mod.rs  test.rs
src/binary_tree/: mod.rs
src/drop/: mod.rs  test.rs
src/dropck/: mod.rs  test.rs
src/from_into/: mod.rs  test.rs
src/into_iter/: mod.rs
src/io/: mod.rs  test.rs
src/iterators/: double_ended.rs  mod.rs  test.rs
src/lifetimes/: mod.rs
src/linked_list/: mod.rs  test.rs
src/macros/: mod.rs  test.rs
src/mongodb/: mod.rs
src/rc/: mod.rs  test.rs
src/regex/: test.rs
src/string/: test.rs
src/variance/: mod.rs  test.rs
