[package]
name = "playground"
version = "0.1.0"
authors = ["pedro"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libplayground"
path = "src/lib.rs"

[[bin]]
name = "iterators"
path = "src/bin/iterators.rs"

[[bin]]
name = "into_iter"
path = "src/bin/into_iter.rs"

[[bin]]
name = "stdio"
path = "src/bin/std_in_out.rs"

[[bin]]
name = "rc"
path = "src/bin/rc.rs"

[[bin]]
name = "arc"
path = "src/bin/arc.rs"

[[bin]]
name = "drop_check"
path = "src/bin/drop_check.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
regex = "1"
lazy_static = "1"
async-std = { version = "1", features = ["attributes"] }
bytes = "1"
tokio = { version = "1", features = ["full"] }
rand = "*"
uuid = { version = "0.8.2", features = ["v4"] }
mini-redis = "*"